; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/drivers/extr_dummy.c_alloc_fake_buffer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/drivers/extr_dummy.c_alloc_fake_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fake_buffer = common dso_local global i32 0, align 4
@GFP_KERNEL = common dso_local global i32 0, align 4
@dummy_page = common dso_local global i8** null, align 8
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @alloc_fake_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @alloc_fake_buffer() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @fake_buffer, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %33

6:                                                ; preds = %0
  store i32 0, i32* %2, align 4
  br label %7

7:                                                ; preds = %29, %6
  %8 = load i32, i32* %2, align 4
  %9 = icmp slt i32 %8, 2
  br i1 %9, label %10, label %32

10:                                               ; preds = %7
  %11 = load i32, i32* @GFP_KERNEL, align 4
  %12 = call i64 @get_zeroed_page(i32 %11)
  %13 = inttoptr i64 %12 to i8*
  %14 = load i8**, i8*** @dummy_page, align 8
  %15 = load i32, i32* %2, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i8*, i8** %14, i64 %16
  store i8* %13, i8** %17, align 8
  %18 = load i8**, i8*** @dummy_page, align 8
  %19 = load i32, i32* %2, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i8*, i8** %18, i64 %20
  %22 = load i8*, i8** %21, align 8
  %23 = icmp ne i8* %22, null
  br i1 %23, label %28, label %24

24:                                               ; preds = %10
  %25 = call i32 (...) @free_fake_buffer()
  %26 = load i32, i32* @ENOMEM, align 4
  %27 = sub nsw i32 0, %26
  store i32 %27, i32* %1, align 4
  br label %33

28:                                               ; preds = %10
  br label %29

29:                                               ; preds = %28
  %30 = load i32, i32* %2, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %2, align 4
  br label %7

32:                                               ; preds = %7
  store i32 0, i32* %1, align 4
  br label %33

33:                                               ; preds = %32, %24, %5
  %34 = load i32, i32* %1, align 4
  ret i32 %34
}

declare dso_local i64 @get_zeroed_page(i32) #1

declare dso_local i32 @free_fake_buffer(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
